[package]
name = "four_line_dropper_backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
bytes = "1.1"
rusqlite = "0.27.0"
rand = "0.8.4"
futures = "0.3"
oorandom = "11.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
